<resources>
    <string name="app_name">Projet_SPDC</string>
    <string name="groupe">Groupe</string>
    <string name="nb">nb</string>
    <string name="liste_des_d_put_s">Liste des députés</string>
    <string name="groupename">Groupe:</string>
    <string name="acronyme">Acronyme:</string>
    <string name="nombre_de_d_put_s">Nombre de députés</string>
    <string name="d_put_s_favoris">Députés favoris</string>
    <string name="groupes_favoris">Groupes favoris</string>
    <string name="a_propos">À propos</string>
    <string name="favoris">Favoris</string>
    <string name="un_nom">un nom</string>
    <string name="chercher">chercher</string>
</resources>